fix(interface): :lipstick: fix vertical overflow on smaller screens

--- a/src/style/stylesheet.css
+++ b/src/style/stylesheet.css
@@ -92,7 +92,7 @@ body {
 	margin-bottom: calc(1.5 * var(--margin));
 	padding: var(--margin) 0;
 	border-radius: var(--border-radius);
-	max-height: 185px;
+	max-height: 30vh;
 	overflow-y: scroll;
 }
 
